# opilio

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
assets/: config.json
common/: Cargo.toml
common/src/: lib.rs  otw.rs
common/tests/: tests.rs
opilio/: Cargo.toml  build.rs
opilio-daemon/: Cargo.toml
opilio-daemon/assets/: config.json  opilio-daemon.service
opilio-daemon/src/: main.rs
opilio-data/: Cargo.toml
opilio-gui/: Cargo.toml  build.rs
opilio-gui/src/: graph.rs  graphs.rs  main.rs  models.rs  running.rs
opilio-lib/: Cargo.toml
opilio-lib/src/: error.rs  lib.rs  otw.rs
opilio-lib/tests/: tests.rs
opilio-tui/: Cargo.toml
opilio-tui/src/: app.rs  config.rs  lib.rs  main.rs  serial_port.rs
opilio/assets/: opilio.desktop
opilio/assets/icons/: icons.sh
opilio/src/: graphs.rs  main.rs  running.rs
opilio_data/: Cargo.toml
opilio_data/src/: lib.rs
opilio_data/tests/: tests.rs
opilio_tui/: Cargo.toml
opilio_tui/src/: app.rs  main.rs  serial_port.rs
shared/: Cargo.toml
shared/src/: lib.rs  otw.rs
shared/tests/: tests.rs
