[package]
name = "opilio-gui"
version = "0.1.0"
edition = "2021"
description = "Opilio Pump/Fan controller"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false }
cubic_spline = "1.0"
env_logger = "0.10"
iced_aw = "0.5"
iced_native = "0.10"
log = "0.4"
opilio-lib = { path = "../opilio-lib", features = ["std"]}
plotters = { version = "0.3", default_features = false, features = [
    "chrono",
    "area_series",
    "line_series",
    "point_series",
] }
plotters-backend = "0.3"
plotters-iced = "0.8"
rand = "0.8"
# time = { version = "0.3", features = ["local-offset"] }
tray-icon = "0.5"

[target."cfg(target_os=\"linux\")".dependencies]
tao = { version = "0.19"}
iced = { version = "0.9", default-features = false, features = ["canvas", "tokio", "glow"] }

[target."cfg(target_os=\"windows\")".dependencies]
iced = { version = "0.9", features = ["canvas", "tokio", "debug"] }

[[bin]]
name = "opilio"
path = "src/main.rs"

[build-dependencies]
image = "0.24"
