[package]
name = "opilio-lib"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
heapless = { version = "0.7", features = ["defmt-impl"] }
postcard = { version = "1.0", features = ["use-defmt"]}
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"


[features]
# Enables std support, it does not enable any other features.
std = []
