[package]
name = "opilio-lib"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", optional = true }
defmt = "0.3"
fixed ={ version = "1.23", features = ["serde"]}
heapless = { version = "0.7", features = ["defmt-impl"] }
log = { version = "0.4", optional = true }
postcard = { version = "1.0", features = ["use-defmt"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serialport = { version = "4.2", optional = true }

[dev-dependencies]
serde_json = "1.0"


[features]
# Enables std support, it does not enable any other features.
std = ["anyhow", "serialport", "log"]
