[package]
name = "opilio-lib"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", optional = true }
defmt = { version = "0.3", optional = true }
fixed ={ version = "1.23", features = ["serde"]}
heapless = { version = "0.7" }
log = { version = "0.4", optional = true }
postcard = { version = "1.0" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tokio-serial = { version = "5.4", optional = true }

[dev-dependencies]
serde_json = "1.0"


[features]
# Enables std support, it does not enable any other features.
std = ["anyhow", "tokio-serial", "log"]
defmt = ["dep:defmt", "postcard/use-defmt", "heapless/defmt-impl"]
