[package]
name = "opilio-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossterm = "0.24"
fast_log = "1.5"
heapless = "0.7"
log = "0.4"
postcard = "1.0"
serialport = "4.2"
opilio-lib = { path = "../opilio-lib", features = ["std"]}
tui = "0.18"
dirs = "4.0"
toml = "0.5"
serde_json = "1.0"



[[bin]]
name = "opilio"
path = "src/main.rs"
