[package]
name = "opilio-tui"
version = "0.4.0"
edition = "2021"
authors = ["Harry Gill <tech@gill.net.in>"]
description = "TUI interface for opilio Pump/Fan controller"
default-run = "opilio-tui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossterm = "0.26"
dirs = "5.0.0"
fast_log = "1.5"
heapless = "0.7"
log = "0.4"
opilio-lib = { path = "../opilio-lib", features = ["std"]}
postcard = "1.0"
serde_json = "1.0"
tui = "0.19"

[[bin]]
name = "opilio-tui"
path = "src/main.rs"
