[package]
name = "opilio"
version = "0.4.0"
edition = "2021"
description = "Opilio Pump/Fan controller"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false }
cubic_spline = "1.0"
env_logger = "0.10"
iced_aw = "0.5"
iced_native = "0.10"
log = "0.4"
opilio-lib = { path = "../opilio-lib", features = ["std"]}
plotters = { version = "0.3", default_features = false, features = [
    "chrono",
    "area_series",
    "line_series",
    "point_series",
] }
plotters-backend = "0.3"
plotters-iced = "0.8"
rand = "0.8"
tray-icon = "0.5"

[target."cfg(target_os=\"linux\")".dependencies]
tao = { version = "0.19"}
iced = { version = "0.9", default-features = false, features = ["canvas", "tokio", "glow"] }

[target."cfg(target_os=\"windows\")".dependencies]
iced = { version = "0.9", features = ["canvas", "tokio"] }

[[bin]]
name = "opilio"
path = "src/main.rs"

[build-dependencies]
image = "0.24"


[package.metadata.deb]
maintainer = "Harry Gill <tech@gill.net.in>"
copyright = "2023, Harry Gill <tech@gill.net.in>"
license-file = ["../LICENSE", "2"]
extended-description = """\
Interface for Opilio Pup/Fan controller"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/opilio-tui", "/usr/local/bin/", "755"],
    ["assets/icons/opilio_16x16.png", "/usr/share/icons/hicolor/16x16/apps/opilio.png", "644"],
    ["assets/icons/opilio_22x22.png", "/usr/share/icons/hicolor/22x22/apps/opilio.png", "644"],
    ["assets/icons/opilio_24x24.png", "/usr/share/icons/hicolor/24x24/apps/opilio.png", "644"],
    ["assets/icons/opilio_32x32.png", "/usr/share/icons/hicolor/32x32/apps/opilio.png", "644"],
    ["assets/icons/opilio_48x48.png", "/usr/share/icons/hicolor/48x48/apps/opilio.png", "644"],
    ["assets/icons/opilio_64x64.png", "/usr/share/icons/hicolor/64x64/apps/opilio.png", "644"],
    ["assets/icons/opilio_72x72.png", "/usr/share/icons/hicolor/72x72/apps/opilio.png", "644"],
    ["assets/icons/opilio_96x96.png", "/usr/share/icons/hicolor/96x96/apps/opilio.png", "644"],
    ["assets/icons/opilio_128x128.png", "/usr/share/icons/hicolor/128x128/apps/opilio.png", "644"],
    ["assets/icons/opilio_256x256.png", "/usr/share/icons/hicolor/256x256/apps/opilio.png", "644"],
    ["assets/opilio.desktop", "/usr/share/applications/", "644"],
    ["../target/release/opilio-daemon", "/usr/local/bin/", "755"],
    ["../target/release/opilio", "/usr/local/bin/", "755"],
    ["../opilio-daemon/assets/opilio-daemon.service", "/etc/systemd/system/", "644"],
    ["../README.md", "/usr/share/doc/opilio/README.md", "644"],
    ["../LICENSE", "/usr/share/doc/opilio/LICENSE", "644"],
]
