[package]
name = "opilio_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossterm = "0.24"
fast_log = "1.5"
heapless = "0.7"
log = "0.4"
postcard = "1.0"
serialport = "4.2"
shared = { path = "../shared", features = ["std"]}
tui = "0.18"
